--- a/ghas-function-app-rbac.json
+++ b/ghas-function-app-rbac.json
@@ -1,8 +1,30 @@
 {
-  "Name": "Spektra GHAS Lab RBAC",
+  "Name": "GHAS Function App",
   "IsCustom": true,
-  "Description": "Minimal RBAC for GitHub Advanced Security lab and webhook integration.",
+  "Description": "GitHub Advanced Security lab integration",
   "Actions": [
+    "Microsoft.Resources/deployments/*",
+    "Microsoft.Resources/deployments/validate/action",
+    "Microsoft.Resources/subscriptions/resourcegroups/resources/read",
+    "Microsoft.Resources/subscriptions/resourceGroups/read",
+    "Microsoft.Compute/disks/write",
+    "Microsoft.Compute/disks/read",
+    "Microsoft.Compute/virtualMachines/write",
+    "Microsoft.Compute/virtualMachines/read",
+    "Microsoft.Network/networkInterfaces/write",
+    "Microsoft.Network/networkInterfaces/read",
+    "Microsoft.Network/networkInterfaces/join/action",
+    "Microsoft.Network/networkSecurityGroups/write",
+    "Microsoft.Network/networkSecurityGroups/read",
+    "Microsoft.Network/networkSecurityGroups/join/action",
+    "Microsoft.Network/publicIPAddresses/write",
+    "Microsoft.Network/publicIPAddresses/read",
+    "Microsoft.Compute/virtualMachines/extensions/read",
+    "Microsoft.Compute/virtualMachines/extensions/write",
+    "Microsoft.Network/publicIPAddresses/join/action",
+    "Microsoft.Network/virtualNetworks/subnets/join/action",
+    "Microsoft.Network/virtualNetworks/write",
+    "Microsoft.Network/virtualNetworks/read",
     "Microsoft.Web/sites/read",
     "Microsoft.Web/sites/functions/read",
     "Microsoft.Web/sites/functions/write",
