--- a/ghas-function-app-rbac.json
+++ b/ghas-function-app-rbac.json
@@ -25,15 +25,12 @@
     "Microsoft.Network/virtualNetworks/read",
     "Microsoft.Compute/virtualMachines/extensions/read",
     "Microsoft.Compute/virtualMachines/extensions/write",
-    "Microsoft.Web/sites/read",
-    "Microsoft.Web/sites/write",
-    "Microsoft.Web/ServerFarms/write",
-    "Microsoft.Web/sites/functions/read",
-    "Microsoft.Web/sites/functions/write",
-    "Microsoft.Web/sites/functions/listKeys/action",
-    "Microsoft.Web/sites/config/read",
-    "Microsoft.Web/sites/config/write",
-    "Microsoft.Insights/components/read",
+    "Microsoft.Web/sites/*",
+    "Microsoft.Web/ServerFarms/*",
+    "Microsoft.Storage/storageAccounts/write",
+    "Microsoft.Storage/storageAccounts/read",
+    "Microsoft.Storage/storageAccounts/listKeys/action",
+    "Microsoft.Insights/components/*",
     "Microsoft.OperationalInsights/workspaces/read",
     "Microsoft.OperationalInsights/workspaces/query/read"
   ],
